Face_recognition_Finding_missing_people-master/k8s/01-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: facetrace
