Face_recognition_Finding_missing_people-master/k8s/04-ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facetrace-ingress
  namespace: facetrace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/missingpeople
            pathType: Prefix
            backend:
              service:
                name: person-service
                port:
                  number: 5001
          - path: /api/foundlocation
            pathType: Prefix
            backend:
              service:
                name: location-service
                port:
                  number: 5002
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-recognition-service
                port:
                  number: 8501
